--- a/project/web/templates/web/base.html
+++ b/project/web/templates/web/base.html
@@ -13,6 +13,7 @@
         <!-- <link rel="stylesheet" href="css/normalize.css"> -->
         <!-- <link rel="stylesheet" href="css/main.css"> -->
         <!-- <script src="js/vendor/modernizr-2.8.3.min.js"></script> -->
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
 
         {% block 'styles' %}
         {% endblock %}
@@ -28,6 +29,8 @@
         <!-- Scripts -->
         <script src="https://code.jquery.com/jquery-1.12.2.min.js"></script>
         <!-- <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.12.2.min.js"><\/script>')</script> -->
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+        
 
         {% block 'js' %}
         {% endblock %}
