--- a/project/web/templates/web/base.html
+++ b/project/web/templates/web/base.html
@@ -1,3 +1,4 @@
+{% load render_bundle from webpack_loader %}
 <!doctype html>
 <html class="no-js" lang="">
     <head>
@@ -30,7 +31,8 @@
         <script src="https://code.jquery.com/jquery-1.12.2.min.js"></script>
         <!-- <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.12.2.min.js"><\/script>')</script> -->
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-        
+
+        {% render_bundle 'main' %}
 
         {% block 'js' %}
         {% endblock %}
