--- a/project/web/templates/web/report/main.html
+++ b/project/web/templates/web/report/main.html
@@ -38,29 +38,6 @@
 
     <div class="Wrapper container">
         <div class="Content">
-<!-- 
-            <div class="CategoryList col-xs-4">
-                <header class="ReportHeader">
-                    <div class="ReportHeader-inner">
-                        <h2 class="ReportHeader-title">Report</h2>
-                    </div>
-                </header>
-
-                <ul class="CategoryList-items">
-                </ul>
-            </div>
-
-            <div class="TweetList col-xs-8">
-                <header class="CategoryHeader">
-                    <div class="CategoryHeader-inner">
-                        <h2 class="CategoryHeader-title">Excessive Alcohol Consumption</h2>
-                    </div>
-                </header>
-
-                 <ul class="TweetList-items">
-                </ul>
-            </div> -->
-
         </div>
     </div>
 
@@ -72,5 +49,5 @@
 
 {% block 'js' %}
     <!-- <script type="text/javascript" src="{% static 'web/assets/js/main.js' %}"></script> -->
-    {% render_bundle 'main' %}
+    {% render_bundle 'report' %}
 {% endblock %}
