--- a/project/web/templates/web/analyse/main.html
+++ b/project/web/templates/web/analyse/main.html
@@ -35,7 +35,7 @@
       </div><!-- /.container-fluid -->
     </nav>
 
-    <div class="Content">
+    <div class="ProgressContent container">
     </div>
 {% endblock %}
 
