--- a/provisioning/roles/common/templates/environment.sh.j2
+++ b/provisioning/roles/common/templates/environment.sh.j2
@@ -5,4 +5,7 @@ export CELERY_BROKER_URL={{ celery_broker_url }}
 export TWITTER_KEY={{ twitter_key }}
 export TWITTER_SECRET={{ twitter_secret }}
 
+export PUSHER_KEY={{ pusher_key }}
+export PUSHER_SECRET={{ pusher_secret }}
+
 {{ "export DEVELOPMENT=1" if development else "" }}
