--- a/project/web/templates/web/base.html
+++ b/project/web/templates/web/base.html
@@ -1,3 +1,4 @@
+{% load staticfiles %}
 <!doctype html>
 <html class="no-js" lang="">
     <head>
@@ -14,6 +15,7 @@
         <!-- <link rel="stylesheet" href="css/main.css"> -->
         <!-- <script src="js/vendor/modernizr-2.8.3.min.js"></script> -->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+        <!-- <link rel="stylesheet" href="{% static 'web/assets/css/bootstrap.css' %}"> -->
 
         {% block 'styles' %}
         {% endblock %}
@@ -27,9 +29,9 @@
         {% endblock %}
 
         <!-- Scripts -->
-        <!-- <script src="https://code.jquery.com/jquery-1.12.2.min.js"></script> -->
-        <!-- <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.12.2.min.js"><\/script>')</script> -->
-        <!-- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script> -->
+        <script src="https://code.jquery.com/jquery-1.12.2.min.js"></script>
+        <script>window.jQuery || document.write('<script src="{% static 'web/assets/js/jquery.min.js' %}"><\/script>')</script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 
         {% block 'js' %}
         {% endblock %}
