--- a/project/web/templates/web/profile/main.html
+++ b/project/web/templates/web/profile/main.html
@@ -1,10 +1,57 @@
 {% extends 'web/base.html' %}
+{% load staticfiles %}
+{% load render_bundle from webpack_loader %}
 
-{% block 'title' %}Profile{% endblock %}
+{% block 'title' %}Your Profile - {{ screen_name }}{% endblock %}
 
 {% block 'content' %}
-    {% if user and not user.is_anonymous %}
-        <h3>Hey, you made it.</h3>
-        <a href="{% url 'logout' %}">Logout</a>
-    {% endif %}
+
+    <nav class="Nav navbar navbar-default navbar-fixed-top">
+      <div class="container">
+        <!-- Brand and toggle get grouped for better mobile display -->
+        <div class="Nav-header navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#nav" aria-expanded="false">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="Nav-brand navbar-brand" href="#">
+            <img src="{% static 'web/assets/img/logo.png' %}" class="Nav-logo" />
+            <span class="Nav-brandTitle">Sentry</span>
+          </a>
+        </div>
+
+        <!-- Collect the nav links, forms, and other content for toggling -->
+        <div class="collapse navbar-collapse pull-right" id="nav">
+          <ul class="Nav-userArea nav navbar-nav">
+            <li class="dropdown dropdown-right">
+                <img class="Nav-userImage" src="{{ profile_img }}" />
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+                    {{ screen_name }} <span class="caret"></span>
+                </a>
+              <ul class="Nav-userDropDown dropdown-menu">
+                <li><a href="#">Settings</a></li>
+                <li><a href="{% url 'logout' %}">Logout</a></li>
+              </ul>
+            </li>
+          </ul>
+        </div><!-- /.navbar-collapse -->
+      </div><!-- /.container-fluid -->
+    </nav>
+
+    <div class="Wrapper container">
+        <div class="Content">
+        </div>
+    </div>
+
+{% endblock %}
+
+{% block 'styles' %}
+    <link rel="stylesheet" href="{% static 'web/assets/css/main.css' %}">
+{% endblock %}
+
+{% block 'js' %}
+    <!-- <script type="text/javascript" src="{% static 'web/assets/js/main.js' %}"></script> -->
+    {% render_bundle 'profile' %}
 {% endblock %}
