--- a/project/web/templates/web/report/main.html
+++ b/project/web/templates/web/report/main.html
@@ -16,13 +16,17 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="Nav-brand navbar-brand" href="#">cleanapp</a>
+          <a class="Nav-brand navbar-brand" href="#">
+            <img src="{% static 'web/assets/img/logo.png' %}" class="Nav-logo" />
+            <span class="Nav-brandTitle">Sentry</span>
+          </a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse pull-right" id="nav">
           <ul class="Nav-userArea nav navbar-nav">
             <li class="dropdown dropdown-right">
+                <img class="Nav-userImage" src="{{ profile_img }}" />
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
                     {{ screen_name }} <span class="caret"></span>
                 </a>
